add simple pages
