# app/repo/entity_repo.go
@@ -20,17 +20,17 @@ func (r *Repo) DeleteEntity(ctx context.Context, id ds.ID) error {
 	return r.delete(ctx, "entities", id)
 }
 
-// FindEntityByPublicID retrieves a entity by its URL-friendly name.
-func (r *Repo) FindEntityByPublicID(ctx context.Context, publicID string) (*ds.Entity, error) {
+// FindEntityByPublicID retrieves an entity by its URL-friendly name.
+func (r *Repo) FindEntityByPublicID(ctx context.Context, publicID string, t ds.EntityType) (*ds.Entity, error) {
 	_, span := r.tracer.Start(ctx, "FindEntityByPublicID")
 	defer span.End()
 
 	ent := new(ds.Entity)
 	const query = `
 		SELECT * FROM entities 
-		WHERE public_id = $1 AND deleted_at IS NULL`
+		WHERE public_id = $1 AND type=$2 AND deleted_at IS NULL`
 
-	err := pgxscan.Get(ctx, r.getDB(ctx), ent, query, publicID)
+	err := pgxscan.Get(ctx, r.getDB(ctx), ent, query, publicID, t)
 	if noRows(err) {
 		return nil, ErrEntityNotFound
 	}
@@ -50,6 +50,7 @@ func (r *Repo) CreateEntity(ctx context.Context, e *ds.Entity) error {
 		"owner_id":        e.OwnerID,
 		"type":            e.Type,
 		"title":           e.Title,
+		"description":     e.Description,
 		"visibility":      e.Visibility,
 		"status":          e.Status,
 		"created_at":      e.CreatedAt,
@@ -65,6 +66,7 @@ func (r *Repo) UpdateEntity(ctx context.Context, e *ds.Entity) error {
 
 	err := r.update(ctx, e.ID, "entities", data{
 		"title":           e.Title,
+		"description":     e.Description,
 		"preview_file_id": e.PreviewFileID,
 		"visibility":      e.Visibility,
 		"updated_at":      time.Now(),
